Bug 92355 - UI: Crash on exit after Properties in specific xlsx document
Summary: UI: Crash on exit after Properties in specific xlsx document
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.4.3 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.0.0.3
Keywords: haveBacktrace
: 92495 (view as bug list)
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-06-26 15:25 UTC by Gordo
Modified: 2015-07-04 12:05 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
backtrace (10.57 KB, text/plain)
2015-06-26 15:25 UTC, Gordo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gordo 2015-06-26 15:25:04 UTC
Created attachment 116845 [details]
backtrace

1. Open attachment 105986 [details] from bug 83675.
2. File -> Properties and Cancel.
3. Close application.
Result:
Crash.

I could not reproduce from scratch.

Windows Vista 64
Version: 4.4.4.3
Build ID: 2c39ebcf046445232b798108aa8a7e7d89552ea8
Comment 1 Julien Nabet 2015-06-26 18:43:12 UTC
On pc Debian x86-64 with master updated today, I could reproduce this.

Here are console logs:
warn:legacy.osl:6965:1:vcl/source/window/window.cxx:271: Window ( 22CustomPropertiesWindow ()) with live children destroyed:  8ComboBox (AppVersion) 23CustomPropertiesTypeBox () 20CustomPropertiesEdit (14.0300) 25CustomPropertiesDateField (26/06/2015) 25CustomPropertiesTimeField (00:00:00) 29CustomPropertiesDurationField (+A : 0 M : 0 J : 0 H : 0 M : 0 S : 0) 26CustomPropertiesEditButton (...) 27CustomPropertiesYesNoButton () 28CustomPropertiesRemoveButton () 8ComboBox (DocSecurity) 23CustomPropertiesTypeBox () 20CustomPropertiesEdit (0) 25CustomPropertiesDateField (26/06/2015) 25CustomPropertiesTimeField (00:00:00) 29CustomPropertiesDurationField (+A : 0 M : 0 J : 0 H : 0 M : 0 S : 0) 26CustomPropertiesEditButton (...) 27CustomPropertiesYesNoButton () 28CustomPropertiesRemoveButton () 8ComboBox (HyperlinksChanged) 23CustomPropertiesTypeBox () 20CustomPropertiesEdit () 25CustomPropertiesDateField (26/06/2015) 25CustomPropertiesTimeField (00:00:00) 29CustomPropertiesDurationField (+A : 0 M : 0 J : 0 H : 0 M : 0 S : 0) 26CustomPropertiesEditButton (...) 27CustomP...
Window ( 22CustomPropertiesWindow ()) with live children destroyed:  8ComboBox (AppVersion) 23CustomPropertiesTypeBox () 20CustomPropertiesEdit (14.0300) 25CustomPropertiesDateField (26/06/2015) 25CustomPropertiesTimeField (00:00:00) 29CustomPropertiesDurationField (+A : 0 M : 0 J : 0 H : 0 M : 0 S : 0) 26CustomPropertiesEditButton (...) 27CustomPropertiesYesNoButton () 28CustomPropertiesRemoveButton () 8ComboBox (DocSecurity) 23CustomPropertiesTypeBox () 20CustomPropertiesEdit (0) 25CustomPropertiesDateField (26/06/2015) 25CustomPropertiesTimeField (00:00:00) 29CustomPropertiesDurationField (+A : 0 M : 0 J : 0 H : 0 M : 0 S : 0) 26CustomPropertiesEditButton (...) 27CustomPropertiesYesNoButton () 28CustomPropertiesRemoveButton () 8ComboBox (HyperlinksChanged) 23CustomPropertiesTypeBox () 20CustomPropertiesEdit () 25CustomPropertiesDateField (26/06/2015) 25CustomPropertiesTimeField (00:00:00) 29CustomPropertiesDurationField (+A : 0 M : 0 J : 0 H : 0 M : 0 S : 0) 26CustomPropertiesEditButton (...) 27CustomPropertiesYesNoButton () 28CustomPropertiesRemoveButton () 8ComboBox (LinksUpToDate) 23CustomPropertiesTypeBox () 20CustomPropertiesEdit () 25CustomPropertiesDateField (26/06/2015) 25CustomPropertiesTimeField (00:00:00) 29CustomPropertiesDurationField (+A : 0 M : 0 J : 0 H : 0 M : 0 S : 0) 26CustomPropertiesEditButton (...) 27CustomPropertiesYesNoButton () 28CustomPropertiesRemoveButton () 8ComboBox (ScaleCrop) 23CustomPropertiesTypeBox () 20CustomPropertiesEdit () 25CustomPropertiesDateField (26/06/2015) 25CustomPropertiesTimeField (00:00:00) 29CustomPropertiesDurationField (+A : 0 M : 0 J : 0 H : 0 M : 0 S : 0) 26CustomPropertiesEditButton (...) 27CustomPropertiesYesNoButton () 28CustomPropertiesRemoveButton () 8ComboBox (ShareDoc) 23CustomPropertiesTypeBox () 20CustomPropertiesEdit () 25CustomPropertiesDateField (26/06/2015) 25CustomPropertiesTimeField (00:00:00) 29CustomPropertiesDurationField (+A : 0 M : 0 J : 0 H : 0 M : 0 S : 0) 26CustomPropertiesEditButton (...) 27CustomPropertiesYesNoButton () 28CustomPropertiesRemoveButton ()

The thing is, in 4.4.4.3, there was no vclPtr part.
Michael: it seems vclPtr unhid this "heisenbug", what do you think?
Comment 2 Michael Meeks 2015-07-01 17:37:48 UTC
Looks fun; it is a VclPtr issue - but the heisenbug is (I suspect) underneath; almost certainly memory corruption - if we run it in valgrind we should find that - I'll take a look. Very hard to see if a memory corruption is fixed though - any number of other bugs could have caused it =)

Thanks !
Comment 3 Commit Notification 2015-07-01 18:02:53 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ff81cb4728c04acf6dfe639c3140b26d68a70751

tdf#92355 - use ScopedVclPtr as a replacement for in-line widgets.

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Meeks 2015-07-01 18:03:19 UTC
Fixed; thanks =) my valgrind showed so much junk from the CL foo I couldn't make progress on anything else here wrt. memory corruption. Please re-open if this recurs.
Comment 5 Commit Notification 2015-07-02 15:53:11 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a912d1f017895898ade559ea02fdb378021cd9ee&h=libreoffice-5-0

tdf#92355 - use ScopedVclPtr as a replacement for in-line widgets.

It will be available in 5.0.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Meeks 2015-07-03 10:11:45 UTC
*** Bug 92495 has been marked as a duplicate of this bug. ***
Comment 7 Julien Nabet 2015-07-04 12:05:04 UTC
Ok with master sources updated today.
Thank you Michael!