tdf#92355 - use ScopedVclPtr as a replacement for in-line widgets.

Change-Id: Iccabcf6df662c0c4814a4c4f20d690778799e049